# Sending_messages_to_clients

./: .env.example  .gitignore  README.md  db.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py  0003_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: blog_media_tags.py
config/: settings.py  urls.py
newsletter/: admin.py  form.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
newsletter/migrations/: 0001_initial.py  0002_client_full_name.py  0002_initial.py  0003_alter_client_options_alter_newsletter_options.py  0003_alter_newsletter_clients.py  0003_alter_newsletter_periodicity_alter_newsletter_status.py  0004_alter_client_options_alter_message_options_and_more.py  0004_newsletter_name.py  0005_alter_client_full_name_alter_client_phone.py  0006_client_author.py  0007_alter_message_options.py  0008_alter_newsletter_status.py  0009_newsletter_date_start.py  0010_alter_newsletter_date_start.py  0011_alter_newsletter_date_time.py  0012_alter_historynewsletter_date_time.py  0013_historynewsletter_newsletter.py  0014_historynewsletter_author.py  0015_remove_historynewsletter_author.py  0016_alter_historynewsletter_response.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_alter_user_password.py  0003_user_token.py  0004_user_avatar.py  0005_alter_user_avatar.py
(+30 files in other folders)
