[tool.poetry]
name = "course-work-6"
version = "0.1.0"
description = ""
authors = ["leonid Petrov <leonidpetrov637@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
isort = "^5.13.2"
black = "^24.4.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
ipython = "^8.26.0"
django-phonenumber-field = "^8.0.0"
pillow = "^10.4.0"
django-phonenumbers = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
